--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -4,6 +4,7 @@
 .statusContainer{
   padding:32px;
   display:flex;
+  height: calc(100vh - 80px);
 }
 .selectContainer{
   height:100%;
@@ -15,10 +16,11 @@
   margin-right:32px;
 }
 .noneSelectContainer{
-  height:100%;
+  height: 100%;
   width:30vw;
   background-color: rgba(var(--d87,255,255,255),1);
   border : 1px solid rgba(var(--b6a,219,219,219),1);
   border-radius: 10px;
   padding:16px;
+  overflow-y: scroll;
 }
